# Fin_Econ_Scaling_Laws

./: LICENSE  README.md  Scaling_Law_Estimator.py  llms.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
DataDefinitions/: datadefinition.py
DataDefinitions/sources/: ETF.py  FRED.py  GKG.py  famafrench.py  q_factors.py  yahoofin.py
DataDefinitions/sources/LLM_Prompts_Data/: neutering.py  summary.py
DataDefinitions/sources/LLM_Prompts_Data/DJ_NEWS/: NML_to_DataFrame.py  PROMPTS.py
DataDefinitions/sources/LLM_Prompts_Data/MDnA/: SEC.py
DataDefinitions/sources/LLM_Prompts_Data/Reddit/: GPT_OUTPUT.py  PROMPTS.py  subreddits.py
DataDefinitions/sources/LLM_Prompts_Data/Twitter/: PROMPTS.py
DataDefinitions/sources/WRDS/: COMPSTAT.py  CRSP.py  fin_ratio_portfolios.py
Neural_Network_Training/: Returns.py
Paper/: Paper.py
Testing/: characteristic_next_return_simulation.py  simulation_example.py
examples/: simulation_complex_DGP.py  simulation_example.py  simulation_simple_DGP.py
scaling_laws/: __init__.py  callbacks.py  config.py  data_splitter.py  enums.py  experiment.py  model_builder.py  plotting.py  portfolio.py  results.py
scaling_laws/utils/: __init__.py  format.py  memory.py  system.py
tests/: test_smoke.py
