[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-econ-scaling-laws"
version = "0.1.0"
description = "Neural-network scaling-law estimator for forecasting problems."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Allan Timmermann" },
    { name = "Luka Vulicevic" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "matplotlib>=3.6",
    "tensorflow>=2.13",
]

[project.optional-dependencies]
dev = ["pytest>=7", "psutil"]

[project.urls]
Homepage = "https://github.com/LukaVuli/Fin_Econ_Scaling_Laws"
Repository = "https://github.com/LukaVuli/Fin_Econ_Scaling_Laws"
Issues = "https://github.com/LukaVuli/Fin_Econ_Scaling_Laws/issues"

[tool.setuptools.packages.find]
include = ["scaling_laws*"]
